# attention-impl-in-CUDA

./: .clang-format  .gitignore  CMakeLists.txt  README.md  params.yaml  spack.yaml
benchmarks/: plots.ipynb
include/: allocator.hpp  attention.h  attention.hpp  benchmark.hpp  cuda_utils.hpp
scripts/: README.md  build.sh  correctness.py
src/: allocator.cpp  benchmark.cpp  main.cu
src/attention/: vanilla.cu  vanilla_cublas.cu  vanilla_v2.cu
